# woco

./: .env.example  .gitignore  Makefile  README.md  config.py  config.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
clients/: cloudinary.py  woocommerce.py
data/: data1.json
examples/mathiaschaize.com/: bash  config.yml  mathiaschaize.py
woco/: __init__.py  __main__.py  config.py  workflow.py
woco/cli/: run.py
woco/cli/arguments/: default_arguments.py  run.py
woco/clients/: cloudinary.py  woocommerce.py
woco/clients/media_storage/: base.py  cloudinary.py
woco/shared/: constants.py  data.py  io.py  utils.py
