[build-system]
requires = [
    "setuptools >= 46.4.0",
    "WooCommerce==3.0.0",
    "cloudinary==1.41.0",
    "ruamel.yaml==0.18.6",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "woco"
version = "0.1.0"
description = ""
authors = ["Natserract <natserract@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.pyright]
venvPath = "."
venv = ".venv"
