[metadata]
name = woco
version = 0.1
url = https://github.com/natserract/woco
author = Natserract
author_email = natserract@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Cython
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development

[options]
python_requires = >=3.9
packages = woco
# https://setuptools.readthedocs.io/en/latest/setuptools.html#setting-the-zip-safe-flag
zip_safe = False
include_package_data = True

install_requires =
    WooCommerce==3.0.0
    cloudinary==1.41.0
    python-dotenv~=0.15.0
    ruamel.yaml==0.18.6

[options.entry_points]
console_scripts =
    woco=woco.__main__:main

[bdist_wheel]
universal = false

[sdist]
formats = gztar
